# wanted-pre-onboarding-backend

./: README.md  pyproject.toml
src/config/: settings.py  urls.py
src/recruits/: admin.py  models.py  permissions.py  serializers.py  urls.py  views.py
src/recruits/migrations/: 0001_initial.py  0002_company_manager.py  0003_remove_company_manager.py  0004_company_manager.py
src/recruits/tests/: test_models.py  test_views.py
src/users/: admin.py  models.py
src/users/migrations/: 0001_initial.py
