[tool.poetry]
name = "wanted-pre-onboarding-backend"
version = "0.1.0"
description = ""
authors = ["chestnut90 <cowzon90@gmail.com>"]
readme = "README.md"
packages = [{include = "wanted_pre_onboarding_backend"}]

[tool.poetry.dependencies]
python = "^3.10"
django = "^4.2.6"
djangorestframework = "^3.14.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
